# gst-playground

./: CMakeLists.txt  README.md
include/: core.hpp  data.hpp  gstmark.h  parser.hpp
src/: CMakeLists.txt  core.cpp  gstmark.c  main.cpp
test/: CMakeLists.txt  test_parser.cpp  test_pipeline.cpp
